<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Converter</string>
    <string name="action_settings">Settings</string>
    <string name="input_base">From base:&#160;&#160;</string>
    <string name="output_base">To base:&#160;</string>
    <string name="base">Base:&#160;</string>
    <string name="convert">Convert</string>
    <string name="result">Result:</string>
    <string name="signed_bin">Signed Binary</string>
    <string name="use_result">Use result</string>
    <string name="clear">Clear</string>
    <string name="exit">Exit</string>
    <string name="Converter">Converter</string>
    <string name="Calculator">Calculator</string>
    <string name="store_result">Store Result</string>
    <string name="num_zero">0</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="num_ten">A</string>
    <string name="num_eleven">B</string>
    <string name="num_twelve">C</string>
    <string name="num_thirteen">D</string>
    <string name="num_fourteen">E</string>
    <string name="num_fifteen">F</string>
    <string name="dot">.</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="power">^</string>
    <string name="open_bracket">(</string>
    <string name="closed_bracket">)</string>
    <string name="equals">=</string>
    <string name="backspace">Backspace</string>
    <string name="input"> Input:    </string>


</resources>
