<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.akhme_000.myapplication.fragments.KeyboardFragment"
    android:layout_width="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
        android:layout_weight="1">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/d_button"
                android:text="@string/num_thirteen"
                android:background="#c90fb0"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num_fourteen"
                android:id="@+id/e_button"
                android:background="#c90fb0"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minHeight="20dp"
                android:minWidth="0dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num_fifteen"
                android:id="@+id/f_button"
                android:background="#c90fb0"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

        </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
        android:layout_weight="1">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num_ten"
                android:id="@+id/a_button"
                android:background="#c90fb0"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num_eleven"
                android:id="@+id/b_button"
                android:background="#c90fb0"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num_twelve"
                android:id="@+id/c_button"
                android:background="#c90fb0"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

        </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
        android:layout_weight="1">


            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/seven_button"
                android:background="@android:color/holo_blue_light"
                android:text="@string/num_seven"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num_eight"
                android:id="@+id/eight_button"
                android:background="@android:color/holo_blue_light"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num_nine"
                android:id="@+id/nine_button"
                android:background="@android:color/holo_blue_light"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

        </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
        android:layout_weight="1">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num_four"
                android:id="@+id/four_button"
                android:background="@android:color/holo_blue_light"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num_five"
                android:id="@+id/five_button"
                android:background="@android:color/holo_blue_light"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num_six"
                android:id="@+id/six_button"
                android:background="@android:color/holo_blue_light"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp"/>

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/num_one"
            android:id="@+id/one_button"
            android:background="@android:color/holo_blue_light"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_between_buttons"
            android:minWidth="0dp"
            android:minHeight="20dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/num_two"
            android:id="@+id/two_button"
            android:background="@android:color/holo_blue_light"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_between_buttons"
            android:minWidth="0dp"
            android:minHeight="20dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/three_button"
            android:text="@string/num_three"
            android:background="@android:color/holo_blue_light"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_between_buttons"
            android:minWidth="0dp"
            android:minHeight="20dp" />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_weight="1">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/minus_button"
                android:text="@string/minus"
                android:background="@android:color/holo_orange_light"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num_zero"
                android:id="@+id/zero_button"
                android:background="@android:color/holo_blue_light"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dot"
                android:background="@android:color/holo_orange_light"
                android:id="@+id/dot_button"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:background="@android:color/holo_orange_light"
            android:id="@+id/plus_button"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_between_buttons"
            android:minWidth="0dp"
            android:minHeight="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/open_bracket"
            android:background="@android:color/holo_orange_light"
            android:id="@+id/open_bracket_button"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_between_buttons"
            android:minWidth="0dp"
            android:minHeight="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/closed_bracket"
            android:background="@android:color/holo_orange_light"
            android:id="@+id/closed_bracket_button"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_between_buttons"
            android:minWidth="0dp"
            android:minHeight="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/multiply"
            android:background="@android:color/holo_orange_light"
            android:id="@+id/multiply_button"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_between_buttons"
            android:minWidth="0dp"
            android:minHeight="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/divide"
            android:background="@android:color/holo_orange_light"
            android:id="@+id/divide_button"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_between_buttons"
            android:minWidth="0dp"
            android:minHeight="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/power"
            android:background="@android:color/holo_orange_light"
            android:id="@+id/power_button"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_between_buttons"
            android:minWidth="0dp"
            android:minHeight="20dp" />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:id="@+id/clear_button"
                android:background="@android:color/holo_red_light"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/backspace"
                android:id="@+id/backspace_button"
                android:background="@android:color/holo_green_light"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/equals"
                android:id="@+id/equals_button"
                android:background="@android:color/holo_blue_dark"
                android:layout_weight="1"
                android:layout_margin="@dimen/padding_between_buttons"
                android:minWidth="0dp"
                android:minHeight="20dp" />

        </LinearLayout>
</LinearLayout>
